fix header hover effect in dark mode

--- a/sass/partial/_blog_header.scss
+++ b/sass/partial/_blog_header.scss
@@ -106,6 +106,11 @@ body.dark-mode {
         &:visited {
             color: $dark-text-primary-color;
         }
+        @media (hover: hover) {
+            &:hover {
+                color: $primary-color;
+            }
+        }
     }
 }
 
